--- a/calculadora.html
+++ b/calculadora.html
@@ -7,7 +7,7 @@
     <title>Calculadora</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="js/calculadora.js"></script>
-    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="css/estilos_calculadora.css">
 </head>
 <body>
     <div class="calculadoraboton"></div>
